# MyProjects

./: .gitignore  README.md
CPP/InheritanceExample/: childClassA.cpp  childClassA.h  childClassB.h  parentClass.h
CPP/LinearSolvers/source/: BiConjugateGradientStab.cpp  BiConjugateGradientStab.h  CMakeLists.txt  ConjugateGradient.cpp  ConjugateGradient.h  LinearSolver.h  LinearSolverFactory.cpp  MultiGrid.cpp  MultiGrid.h  main.cpp  vector_math.cpp  vector_math.h
CPP/cmaketutorialJohnLamp/chapter3/: CMakeLists.txt  ToDo.cc  ToDo.h  main.cc
CPP/learncppTutorial/chapter0/: prog
CPP/tutorial/: Makefile
CPP/vectorExample/: Makefile  main  main.cpp  main11.cpp
IASTATEWebpage/WWW/: app.css  app.js  index.html
IASTATEWebpage/WWW/coursework/: coursework.html  coursework.json
IASTATEWebpage/WWW/home/: home.html  home.js
IASTATEWebpage/WWW/research/: research.js
IASTATEWebpage/WWW/teaching/: teaching.js  teaching.json
Java/Projects/Carcasonne/: Design.txt  NumLines.sh  README.md
Java/Utilities/: README.md
Java/Utilities/src/: ArrayUtils.java  ArrayUtilsTest.java  (+6 more)
Mathematica/: GeneticAlgorithm.m  Interpolation.m  SIR.m  install.sh
Matlab/: MatlabConventions.txt  install.zsh
Matlab/MATLAB/: latexFileWriter.m  pathdef.m  startup.m
Matlab/template_header/: template_cl.m
PersonalWebpage/: bower.json  package.json
PersonalWebpage/app/: index.html
TeX/: Example.tex  install.zsh  tags
TeX/VictorEijkhout-tex-by-topic-c037e6955e86/: .hg_archival.txt  Makefile  TeXbyTopic.idx  TeXbyTopic.svn  TeXbyTopic.tex  latexrefman.idx  ntg10.clo  rapport3.cls
(+115 files in other folders)
